show only respective shopkeeper's products